--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,23 +10,33 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        app {
+            storeFile file('C:\\Users\\r00t\\AndroidStudioProjects\\actualFlyer\\app.jks')
+            storePassword 'appapp'
+            keyAlias 'app'
+            keyPassword 'appapp'
+        }
+    }
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.kaloglu.actualflayer"
+        applicationId "com.kaloglu.actualflyer"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.app
+        }
+        debug {
+            minifyEnabled false
         }
     }
     compileOptions {
@@ -39,10 +49,9 @@ android {
         freeCompilerArgs += ["-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"]
     }
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding = true
     }
-
 
 }
 
@@ -50,7 +59,6 @@ android {
 
 dependencies {
 
-    //TODO move these to dependencies gradle
     def nav_version = "2.3.1"
     def dagger_hilt = "2.28.3-alpha"
     def dagger_hilt_viewModel = "1.0.0-alpha02"
@@ -71,10 +79,9 @@ dependencies {
 
     // Required only if Facebook login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
-    implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
 
     implementation "com.tencent:mmkv-static:1.2.2"
-    implementation "androidx.startup:startup-runtime:1.0.0-rc01"
+    implementation "androidx.startup:startup-runtime:1.0.0"
 
     implementation "androidx.activity:activity-ktx:1.2.0-beta01"
     implementation "androidx.fragment:fragment-ktx:1.3.0-beta01"
@@ -100,8 +107,8 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:$dagger_hilt_viewModel"
 
 
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.1"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.1"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -116,20 +123,13 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-core:$kotlin_serialization"
 
-
-
-    implementation 'com.google.firebase:firebase-database-ktx:19.5.0'
-
-
+    implementation 'com.google.firebase:firebase-database-ktx:19.5.1'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.10"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
 }
 
